final backend fixes